--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="/assets/main.css" charset="utf-8" />
   <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 <body>
