--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -23,10 +23,9 @@ layout: default
     <h2 class="lh-solid">Daftar Isi</h2>
 
     {%  for post in site.categories[page.category] %}
-    {%  assign author = site.data.author[post.author] %}
       <a class="link black" href="{{post.url}}">
         <div class="f4"> {{post.title}} </div>
-        <div class="mb2 f6"> {{author.name}} </div>
+        <div class="mb2 f6"> {{post.title}} </div>
       </a>
     {% endfor %}
 
