--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -25,7 +25,7 @@ layout: default
     {%  for post in site.categories[page.category] %}
       <a class="link black" href="{{post.url}}">
         <div class="f4"> {{post.title}} </div>
-        <div class="mb2 f6"> {{post.title}} </div>
+        <div class="mb2 f6"> {{post.author}} </div>
       </a>
     {% endfor %}
 
